ADD: modal-createMarker

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,8 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+    <ion-buttons>
+      <ion-buttons slot="end">
+        <ion-button size="large" slot="end" (click)="presentModal()"> <ion-icon name="add-outline"></ion-icon> </ion-button>
+      </ion-buttons>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
