centrado etiqueta span

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,4 +1,7 @@
-.center-span {
+form, input, optgroup, select {
+    margin: 0;
+    font: inherit;
+    color: inherit;
     display: block;
     text-align: center;
 }
