--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -30,7 +30,7 @@
         <ion-button type="submit" (click)="login(email, password)" expand="block"> Entrar </ion-button>
       </ion-col>
     </ion-row>
-    <span class="divider line one-line center-span"> O </span>
+    <span id="center-span" class="divider line one-line center-span"> O </span>
     <ion-row>
       <ion-col>
         <ion-button color="danger" type="submit" (click)="loginGoogle()" expand="block"> <ion-icon name="logo-google"></ion-icon> </ion-button>
