UPDATE: modificacion a register.page.html y se ingresa campos a el documento de usuario (rut, lessee)

--- a/src/app/pages/modal-create-marker/modal-create-marker.page.html
+++ b/src/app/pages/modal-create-marker/modal-create-marker.page.html
@@ -142,7 +142,7 @@
         </ion-row>
       </ion-grid>
       <ion-item lines="full">
-        <ion-label position="default"> Apto para veganos </ion-label>
+        <ion-label position="default">  </ion-label>
         <ion-checkbox required #vegan></ion-checkbox>
       </ion-item>
       <ion-item lines="full">
